========================
0.0.77
========================

========================
0.0.76
========================

- updated `COMPONENTATOR(name, components, [removeprev])` by adding `removeprev` argument

========================
0.0.75
========================

- updated `CALL()` response (it returns `Object` instead of `Array`) with multiple actions
- `$.action(name, [data])` is an alias for `CALL()` method directly in the SchemaOptions
- fixed view command `@{language}`
- added `FlowStreamInstance.init` delegate (executed once when the instance is ready)
- added `FlowStreamInstance.refresh` delegate (executed if the Flow schema is updated)
- added `FlowStreamInstance.instances {Object}` alias to `flowinstance.meta.flow`
- added `FlowStreamInstance.logger(callback)` that captures all send messages
- added `FlowStreamInstance.middleware(callback)` that captures all send messages and prevents continuing
- improved `PROXY()` method
- added error handling for `COMPONENTATOR()`
- fixed `returning` with modify and upsert in the `QueryBuilder`
- added support for cloning folders in remote editing

========================
0.0.74
========================

- improved error handling in JSON Schemas
- improved `.toJSONSchema()` by adding:
	- nested object in the form `{ name:String, path: String }`
	- nested object arrays in the form `[{ name: String, path: String }]`
	- linked schemas in the form `name:@User, address:@Address`
- added `CALL().language(value)` method
- added `$.repo {Object}` into the `SchemaOptions`
- added support for promises into the `CLEANUP()`
- extended `schema.action()` by adding new options:
	- `user: true/false`
	- `permissions: 'read,write,admin'`
- added `QueryBuilder.returning(fields)` method

========================
0.0.73
========================

- PREF configuration is saved nicely
- fixed scalar opertaion for NoSQL QueryBuilder
- fixed validating data according to the JSON schema

========================
0.0.72
========================