@@ -2,6 +2,8 @@
 0.0.77
 ========================
 
+- fixed `permissions` in the `schema.action` (critical)
+
 ========================
 0.0.76
 ========================
